--- a/templates/products.html
+++ b/templates/products.html
@@ -1,5 +1,5 @@
 <h1>Hello, {{name}}!</h1>
-
+<p>Released Product Tracker</p>
 <input id="filter" type="text" placeholder="Filter" />
 <button onclick="updateTable()">Filter</button>
 <br />
@@ -8,6 +8,7 @@
         <tr>
             <th>Product</th>
             <th>Price</th>
+            <th>Released</th>
         </tr>
     </thead>
     <tbody id="tbody">
@@ -22,8 +23,9 @@ async function updateTable() {
     const products = await response.json();
     tbody.innerHTML = products.map(product => `
         <tr>
-            <td>${product[0]}</td>
             <td>${product[1]}</td>
+            <td>${product[2]}</td>
+            <td>${product[3]}</td>
         </tr>
     `).join('');
 }
