--- a/templates/products.html
+++ b/templates/products.html
@@ -4,6 +4,7 @@
 <button onclick="updateTable()">Filter</button>
 <br />
 <table>
+    <caption>Product Table</caption>
     <thead>
         <tr>
             <th>Product</th>
