Increase size of input field

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
     <form>
-        Enter Your Name: <input type="text" name="name" id="name">
+        Enter Your Name: <input type="text" name="name" id="name" style="width: 100%">
         <input type="submit" value="Submit">
     </form>
 
